[package]
name = "try-collect"
version = "0.1.0"
edition = "2018"
authors = ["Sven Marnach <sven@marnach.net>"]
description = "A fallible trait to collect into fixed-size collections."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []
