[package]
name = "try-collect"
version = "0.1.0"
edition = "2021"
authors = ["Sven Marnach <sven@marnach.net>"]
description = "A fallible trait to collect into fixed-sized collections."
license = "MIT OR Apache-2.0"
repository = "https://github.com/smarnach/try-collect"

[features]
default = ["std"]
std = []
